fixed responsiveness on firefox

--- a/src/styles/[id].module.scss
+++ b/src/styles/[id].module.scss
@@ -9,6 +9,7 @@
 
     .banner {
       grid-area: image;
+      overflow: hidden;
     }
   }
 
@@ -17,7 +18,7 @@
     flex-direction: column;
     grid-area: details;
     gap: 1rem;
-    padding: 2rem;
+    padding: 1rem;
   }
 
   .details {
@@ -62,7 +63,9 @@
     flex-direction: column;
     justify-content: center;
     height: auto;
-    
+    padding: 0 1rem;
+    margin-top: 1rem;
+
     span {
       margin: 1rem 0;
       font-size: 2rem;
@@ -77,7 +80,7 @@
       margin: 1rem auto;
     }
   }
-  
+
 @media screen and (max-width: 1700px) {
   .container {
     display: grid;
